// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.failsafe.acceptance given: [case1] reviewer exits with code 0 (passed) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed 0.1s
   └─ ✓ judge.1 - allowed 0.0s

🗿 route.stone.set
   ├─ stone = 1.review-pass
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 1.review-pass.i1.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-exit-0.sh
      │       ├─ finished [TIME] ✓
      │       └─ review: .route/1.review-pass.guard.review.i1.96c9a7a18d919f1fd1f7df7391020182cef05d7eaa5344005705566716a6d7a3.r1.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-0.sh
              └─ finished [TIME] ✓
"
`;

exports[`driver.route.failsafe.acceptance given: [case2] reviewer exits with code 2 (constraint) when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🪶 judge 1
   ├─ stdout
   │  ├─
   │  │
   │  │  passed: false
   │  │  reason: threshold exceeded (1 > 0)
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by constraints
      └─ exit code: 2 ✋
"
`;

exports[`driver.route.failsafe.acceptance given: [case2] reviewer exits with code 2 (constraint) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - completed 0.0s
   └─ ✗ judge.1 - blocked 0.0s

🗿 route.stone.set
   ├─ stone = 2.review-constraint
   ├─ passage = blocked
   ├─ reason = threshold exceeded (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ 2.review-constraint.i1.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-exit-2.sh
      │       ├─ finished [TIME] ✓
      │       ├─ review: .route/2.review-constraint.guard.review.i1.b56785d011f06948b7467241f7356dc1639af6210b9a38fb3f2fd1d2cf79f6b6.r1.md
      │       └─ 1 blocker 🔴
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-2.sh
              ├─ finished [TIME] ✗
              └─ reason: threshold exceeded (1 > 0)
"
`;

exports[`driver.route.failsafe.acceptance given: [case3] reviewer exits with code 1 (malfunction) when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🔎 review 1
   ├─ stdout
   │  ├─
   │  │
   │  │  stdout: reviewer crashed unexpectedly
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  │  stderr: ERROR: fatal crash
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by malfunction
      └─ exit code: 1 💥
"
`;

exports[`driver.route.failsafe.acceptance given: [case3] reviewer exits with code 1 (malfunction) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - malfunctioned 0.1s
   └─ ✓ judge.1 - allowed 0.0s

🗿 route.stone.set
   ├─ stone = 3.review-malfunction
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   └─ guard
      ├─ artifacts
      │   └─ 3.review-malfunction.i1.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-exit-1.sh
      │       ├─ finished [TIME] ✓
      │       └─ review: .route/3.review-malfunction.guard.review.i1.cd37f3c443ffc670978ec359a4de6bf24c6fad95c6db08ae9c1bb3e66dd17b6d.r1.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-0.sh
              └─ finished [TIME] ✓
"
`;

exports[`driver.route.failsafe.acceptance given: [case3] reviewer exits with code 1 (malfunction) when: [t2] route.drive is invoked after malfunction then: stdout matches snapshot 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 3.review-malfunction
   │
   └─ 💥 halted, guard malfunction
      └─ please tell a human this needs to be fixed before you can continue
"
`;

exports[`driver.route.failsafe.acceptance given: [case4] judge exits with code 0 (passed) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   └─ ✓ judge.1 - allowed 0.0s

🗿 route.stone.set
   ├─ stone = 4.judge-pass
   ├─ passage = allowed
   └─ guard
      ├─ artifacts
      │   └─ 4.judge-pass.i1.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-0.sh
              └─ finished [TIME] ✓
"
`;

exports[`driver.route.failsafe.acceptance given: [case5] judge exits with code 2 (constraint) when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🪶 judge 1
   ├─ stdout
   │  ├─
   │  │
   │  │  passed: false
   │  │  reason: threshold exceeded (1 > 0)
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by constraints
      └─ exit code: 2 ✋
"
`;

exports[`driver.route.failsafe.acceptance given: [case5] judge exits with code 2 (constraint) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   └─ ✗ judge.1 - blocked 0.0s

🗿 route.stone.set
   ├─ stone = 5.judge-constraint
   ├─ passage = blocked
   ├─ reason = threshold exceeded (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ 5.judge-constraint.i1.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-2.sh
              ├─ finished [TIME] ✗
              └─ reason: threshold exceeded (1 > 0)
"
`;

exports[`driver.route.failsafe.acceptance given: [case6] judge exits with code 1 (malfunction) when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🪶 judge 1
   ├─ stdout
   │  ├─
   │  │
   │  │  stdout: judge crashed unexpectedly
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  │  stderr: FATAL: judge process failed
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by malfunction
      └─ exit code: 1 💥
"
`;

exports[`driver.route.failsafe.acceptance given: [case6] judge exits with code 1 (malfunction) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   └─ ✗ judge.1 - blocked 0.0s

🗿 route.stone.set
   ├─ stone = 6.judge-malfunction
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   └─ guard
      ├─ artifacts
      │   └─ 6.judge-malfunction.i1.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-1.sh
              ├─ finished [TIME] ✗
              └─ reason: command exited 1; see judge artifact for details
"
`;

exports[`driver.route.failsafe.acceptance given: [case6] judge exits with code 1 (malfunction) when: [t2] route.drive is invoked after malfunction then: stdout matches snapshot 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 6.judge-malfunction
   │
   └─ 💥 halted, guard malfunction
      └─ please tell a human this needs to be fixed before you can continue
"
`;

exports[`driver.route.failsafe.acceptance given: [case7] both reviewer and judge malfunction when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🔎 review 1
   ├─ stdout
   │  ├─
   │  │
   │  │  stdout: reviewer crashed unexpectedly
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  │  stderr: ERROR: fatal crash
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by malfunction
      └─ exit code: 1 💥

🪶 judge 1
   ├─ stdout
   │  ├─
   │  │
   │  │  stdout: judge crashed unexpectedly
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  │  stderr: FATAL: judge process failed
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by malfunction
      └─ exit code: 1 💥
"
`;

exports[`driver.route.failsafe.acceptance given: [case7] both reviewer and judge malfunction when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   ├─ ✓ review.1 - malfunctioned 0.0s
   └─ ✗ judge.1 - blocked 0.0s

🗿 route.stone.set
   ├─ stone = 7.both-malfunction
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   └─ guard
      ├─ artifacts
      │   └─ 7.both-malfunction.i1.md
      ├─ reviews
      │   └─ r1: bash $route/.test/mock-exit-1.sh
      │       ├─ finished [TIME] ✓
      │       └─ review: .route/7.both-malfunction.guard.review.i1.59340206c39ecea9e5e2da1f683a3c61f71fd21173161122443880dc2bfc519c.r1.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-1.sh
              ├─ finished [TIME] ✗
              └─ reason: command exited 1; see judge artifact for details
"
`;
